// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code output renders correctly 1`] = `
"<Blueprint4.Card elevation={0} interactive={false}>
  <Component className=\\"code-output\\">
    display(&#39;&#39;);
  </Component>
</Blueprint4.Card>"
`;

exports[`Empty output renders an empty card 1`] = `
"<Blueprint4.Card elevation={0} interactive={false}>
  &#39;&#39;
</Blueprint4.Card>"
`;

exports[`Error output (no consoleLogs) renders correctly 1`] = `
"<Blueprint4.Card elevation={0} interactive={false}>
  <Component className=\\"error-output\\">
    Expected , got .
  </Component>
</Blueprint4.Card>"
`;

exports[`Error output (with consoleLogs) renders correctly 1`] = `
"<Blueprint4.Card elevation={0} interactive={false}>
  <Component className=\\"log-output\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </Component>
  <br />
  <Component className=\\"error-output\\">
    Expected , got .
  </Component>
</Blueprint4.Card>"
`;

exports[`Repl renders correctly 1`] = `
"<div className=\\"Repl\\" style={{...}}>
  <div className=\\"repl-output-parent\\">
    <Output output={{...}} usingSubst={false} isHtml={false} />
    <Output output={{...}} usingSubst={false} isHtml={false} />
    <Output output={{...}} usingSubst={false} isHtml={false} />
    <Output output={{...}} usingSubst={false} isHtml={false} />
    <HotKeysEnabled className=\\"repl-input-parent row bp4-card bp4-elevation-0\\" handlers={{...}}>
      <ReplInput handleBrowseHistoryDown={[Function: handleBrowseHistoryDown]} handleBrowseHistoryUp={[Function: handleBrowseHistoryUp]} handleReplValueChange={[Function: handleReplValueChange]} handleReplEval={[Function: handleReplEval]} handleReplOutputClear={[Function: handleReplOutputClear]} output={{...}} replValue=\\"\\" sourceChapter={1} sourceVariant=\\"default\\" externalLibrary=\\"NONE\\" replButtons={{...}} />
    </HotKeysEnabled>
  </div>
</div>"
`;

exports[`Result output (no consoleLogs) renders correctly 1`] = `
"<Blueprint4.Card elevation={0} interactive={false}>
  <Component className=\\"result-output\\">
    42
  </Component>
</Blueprint4.Card>"
`;

exports[`Result output (with consoleLogs) renders correctly 1`] = `
"<Blueprint4.Card elevation={0} interactive={false}>
  <Component className=\\"log-output\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </Component>
  <Component className=\\"result-output\\">
    42
  </Component>
</Blueprint4.Card>"
`;

exports[`Running output renders correctly 1`] = `
"<Blueprint4.Card elevation={0} interactive={false}>
  <Component className=\\"log-output\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </Component>
</Blueprint4.Card>"
`;
